# grpc-web

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE
javascript/net/grpc/web/generator/: BUILD.bazel  generator_options.proto  grpc_generator.cc
