"""
A bazel module for the grpc-web project.

Visit https://grpc.io/ and https://github.com/grpc/grpc-web for
more information about the project.
"""

module(
    name = "grpc-web",
    version = "1.5.0.bcr",
    compatibility_level = 1,
    repo_name = "com_github_grpc_grpc_web",
)

bazel_dep(name = "protobuf", version = "3.19.6", repo_name = "com_google_protobuf")
bazel_dep(name = "grpc", version = "1.48.1.bcr.3", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "rules_cc", version = "0.0.2")
bazel_dep(name = "rules_proto", version = "6.0.2")
